# pg_jitter

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  RELEASE-0.2.0.md  RELEASE-0.3.0.md  bench_parallel.sh  bench_parallel_sharing.sh  build.bat  build.cmd  build.sh  install.bat  install.cmd  install.sh
.buildkite/: pipeline.yml
.buildkite/scripts/: build-deb.sh  build-rpm.sh  common.sh
.github/workflows/: build-reusable.yml  cmake-multi-platform.yml  pg14-linux-arm.yml  pg14-linux.yml  pg14-macos.yml  pg14-windows.yml  pg14.yml  pg15-linux-arm.yml  pg15-linux.yml  pg15-macos.yml  pg15-windows.yml  pg15.yml  pg16-linux-arm.yml  pg16-linux.yml  pg16-macos.yml  pg16-windows.yml  pg16.yml  pg17-linux-arm.yml  pg17-linux.yml  pg17-macos.yml  pg17-windows.yml  pg17.yml  pg18-linux-arm.yml  pg18-linux.yml  pg18-macos.yml  pg18-windows.yml  pg18.yml  trigger-travis.yml
bench/ARM64/: BENCHMARK_PG14.md  BENCHMARK_PG15.md  BENCHMARK_PG16.md  BENCHMARK_PG17.md  BENCHMARK_PG18.md  BENCHMARK_asmjit.md  BENCHMARK_mir.md  BENCHMARK_sljit.md
bench/ARM64/0.1.0/: BENCHMARK_PG14.md  BENCHMARK_PG17.md  BENCHMARK_PG18.md
bench/ARM64/0.3.0/: BENCHMARKS_v14.md  BENCHMARKS_v15.md  BENCHMARKS_v16.md  BENCHMARKS_v17.md  BENCHMARKS_v18.md  CRM_BENCHMARKS.md  ECOMMERCE_BENCHMARKS.md  OLAP_BENCHMARKS.md  TPCC_BENCHMARKS.md  TPCH_BENCHMARKS.md
bench/x86_64/: BENCHMARK_PG14.md  BENCHMARK_PG15.md  BENCHMARK_PG16.md  BENCHMARK_PG17.md  BENCHMARK_PG18.md  BENCHMARK_asmjit.md  BENCHMARK_sljit.md
bench/x86_64/0.1.0/: BENCHMARK_PG15.md  BENCHMARK_PG18.md  BENCHMARK_mir.md
ci/: github-actions.sh
cmake/: CMakeLists.txt  asmjit.cmake  mir.cmake  precompiled.cmake  sljit.cmake
compat/win32/: pg_crc32c_compat.h  unistd.h
compat/win32/arpa/: inet.h
compat/win32/netinet/: in.h
compat/win32/port/atomics/: generic-msvc.h
compat/win32/sys/: mman.h
packaging/debian/: control.in  rules
packaging/rpm/: pg_jitter.spec.in
patches/: mir-aarch64-hex-value-sentinel.patch  yyjson-pg-jitter.patch
sql/: pg_jitter_functions.sql
src/: pg_jit_deform_templates.c  pg_jit_deform_templates.h  pg_jit_funcs.c  pg_jit_funcs.h  pg_jit_mir_blobs.h  pg_jit_tier2_wrappers.c  pg_jit_tier2_wrappers.h  pg_jitter_asmjit.cpp  pg_jitter_asmjit_arm64.inc  pg_jitter_asmjit_x86.inc  pg_jitter_common.c  pg_jitter_common.h  pg_jitter_compat.h  pg_jitter_deform_jit.c  pg_jitter_meta.c  pg_jitter_mir.c  pg_jitter_pcre2.c  pg_jitter_pcre2.h  pg_jitter_simd.c  pg_jitter_simd.h  pg_jitter_simdjson.cpp  pg_jitter_simdjson.h  pg_jitter_sljit.c  pg_jitter_stringzilla_config.h  pg_jitter_vectorscan.c  pg_jitter_vectorscan.h  pg_jitter_yyjson.c  pg_jitter_yyjson.h
tests/: bench.sql  bench_all_backends.sh  bench_all_versions.sh  bench_blob_compare.sh  bench_cache_compare.sh  bench_cache_prepared.sh  bench_case_bsearch.sh  bench_compilation.sh  bench_comprehensive.sh  bench_ecommerce.sh  bench_ecommerce_sustained.sh  bench_in_list.sh  bench_in_list_ab.sh  bench_jit_showcase.sh  bench_joins.sql  bench_olap_sustained.sh  bench_parallel.sh  bench_parallel_jit.sql  bench_parallel_modes.sh  bench_parallel_sharing.sh  bench_per_version.sh  bench_rle.sh  bench_setup.sql  bench_setup_extra.sql  bench_setup_rle.sql  bench_setup_rle_grouped.sql  bench_setup_wide.sql  bench_tpcc.sh  bench_tpcc_load.sql  bench_tpcc_setup.sql  bench_tpch.sh  gen_cross_version_benchmarks.py  gen_wide_tables.py  mir_bench  mir_bench.c  parse_explain_json.py  run_all_benchmarks.sh  run_all_versions.sh  run_pg_regress.sh  test_case_bsearch.sql  (+10 more)
tools/: catalog_surface.py  extract_inlines.py  gen_deform_templates.py  gen_tier2_wrappers.py  mir_jit_funcs.c  mir_precompile.c
